# kexec-lite

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  configure.ac  container_of.h  kexec.c  kexec_memory_map.c  kexec_memory_map.h  kexec_trampoline.S  kexec_trampoline.h  list.h  simple_allocator.c  simple_allocator.h
